--- a/paginas/labios.html
+++ b/paginas/labios.html
@@ -144,11 +144,11 @@
                         </li>
                         <li class="categoria"><a href="#">CATEGORIA</a>
                             <ul class="submenu">
-                                <li><a href="#">Limpieza</a></li>
-                                <li><a href="#">Hidratacion</a></li>
-                                <li><a href="#">Anti-age</a></li>
-                                <li><a href="#">Serum</a></li>
-                                <li><a href="#">Protectores</a></li>
+                                <li><a href="#">Mate</a></li>
+                                <li><a href="#">Satinado</a></li>
+                                <li><a href="#">Glitter</a></li>
+                                <li><a href="#">Gloss</a></li>
+                                <li><a href="#">Tinte</a></li>
                             </ul>
                         </li>
                         <li class="categoria"><a href="#">PRESENTACION</a>
