--- a/paginas/ojos.html
+++ b/paginas/ojos.html
@@ -142,11 +142,9 @@
                         </li>
                         <li class="categoria"><a href="#">CATEGORIA</a>
                             <ul class="submenu">
-                                <li><a href="#">Limpieza</a></li>
-                                <li><a href="#">Hidratacion</a></li>
-                                <li><a href="#">Anti-age</a></li>
-                                <li><a href="#">Serum</a></li>
-                                <li><a href="#">Protectores</a></li>
+                                <li><a href="#"></a>Mate</li>
+                                <li><a href="#">Metalico</a></li>
+                                <li><a href="#">Satinado</a></li>
                             </ul>
                         </li>
                         <li class="categoria"><a href="#">PRESENTACION</a>
