--- a/paginas/rostro.html
+++ b/paginas/rostro.html
@@ -141,11 +141,11 @@
                         </li>
                         <li class="categoria"><a href="#">CATEGORIA</a>
                             <ul class="submenu">
-                                <li><a href="#">Limpieza</a></li>
-                                <li><a href="#">Hidratacion</a></li>
-                                <li><a href="#">Anti-age</a></li>
-                                <li><a href="#">Serum</a></li>
-                                <li><a href="#">Protectores</a></li>
+                                <li><a href="#">Base</a></li>
+                                <li><a href="#">Contorno</a></li>
+                                <li><a href="#">Iluminador</a></li>
+                                <li><a href="#">Corrector</a></li>
+                                <li><a href="#">Rubor</a></li>
                             </ul>
                         </li>
                         <li class="categoria"><a href="#">PRESENTACION</a>
