--- a/paginas/limpieza.html
+++ b/paginas/limpieza.html
@@ -142,17 +142,13 @@
                                 <li><a href="#">Menor precio</a></li>
                             </ul>
                         </li>
-                        <li class="categoria"><a href="#">CATEGORIA</a>
-                            <ul class="submenu">
-                                <li><a href="#">Limpieza</a></li>
-                                <li><a href="#">Serum</a></li>
-                                <li><a href="#">Brumas</a></li>
-                            </ul>
-                        </li>
                         <li class="categoria"><a href="#">PRESENTACION</a>
                             <ul class="submenu">
                                 <li><a href="#">Liquido</a></li>
-                                <li><a href="#">Polvo</a></li>
+                                <li><a href="#">Espuma</a></li>
+                                <li><a href="#">Gel</a></li>
+                                <li><a href="#">Aceite</a></li>
+                                <li><a href="#">Leche</a></li>
                             </ul>
                         </li>
                     </ul>
