--- a/paginas/serum.html
+++ b/paginas/serum.html
@@ -140,17 +140,10 @@
                         </li>
                         <li class="categoria"><a href="#">CATEGORIA</a>
                             <ul class="submenu">
-                                <li><a href="#">Limpieza</a></li>
                                 <li><a href="#">Hidratacion</a></li>
                                 <li><a href="#">Anti-age</a></li>
-                                <li><a href="#">Serum</a></li>
-                                <li><a href="#">Protectores</a></li>
-                            </ul>
-                        </li>
-                        <li class="categoria"><a href="#">PRESENTACION</a>
-                            <ul class="submenu">
-                                <li><a href="#">Liquido</a></li>
-                                <li><a href="#">Polvo</a></li>
+                                <li><a href="#">Reparador</a></li>
+                                <li><a href="#">Luminosidad</a></li>
                             </ul>
                         </li>
                     </ul>
