arreglos de correcciones de tercera pre entrega

--- a/paginas/labios.html
+++ b/paginas/labios.html
@@ -346,7 +346,7 @@
                             <div class="card-producto">
                                 <div class="image-content-producto">
                                     <div class="card-image-producto">
-                                        <img id="labial-mac" src="../img/pag-maqullaje/mac-labial-5.png"
+                                        <img id="labial-mac-powder" src="../img/pag-maqullaje/mac-labial-5.png"
                                             alt="Labial en barra MAC">
                                     </div>
                                 </div>
