--- a/paginas/limpieza.html
+++ b/paginas/limpieza.html
@@ -453,7 +453,7 @@
 
     <!--Footer-->
     <section class="caja-footer">
-        <article class="box-footer">
+        <article class="box-footer" id="column-footer">
             <div class="nosotros">
                 <h1 id="nosotros">Beauty care - Skincare y maquillaje</h1>
                 <hr>
