--- a/paginas/rostro.html
+++ b/paginas/rostro.html
@@ -448,8 +448,8 @@
     </section>
 
     <!--Footer-->
-    <section class="caja-footer">
-        <article class="box-footer">
+    <section class="box-footer">
+        <article class="caja-footer" id="direction-footer">
             <div class="nosotros">
                 <h1 id="nosotros">Beauty care - Skincare y maquillaje</h1>
                 <hr>
@@ -483,12 +483,9 @@
             </div>
         </article>
     </section>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
