--- a/paginas/serum.html
+++ b/paginas/serum.html
@@ -429,48 +429,45 @@
         </article>
     </section>
 
-    <!--Footer-->
-    <section class="caja-footer">
-        <article class="box-footer">
-            <div class="nosotros">
-                <h1 id="nosotros">Beauty care - Skincare y maquillaje</h1>
-                <hr>
-                <h3 id="nosotros-texto">Comprá online todo lo que
-                    necesitás de skincare,
-                    maquillaje, pelo y cuidado
-                    del rostro en Argentina. En
-                    3 cuotas sin interés y con
-                    envíos a todo el país.</h3>
-            </div>
+   <!--Footer-->
+   <section class="box-footer">
+    <article class="caja-footer" id="direction-footer">
+        <div class="nosotros">
+            <h1 id="nosotros">Beauty care - Skincare y maquillaje</h1>
+            <hr>
+            <h3 id="nosotros-texto">Comprá online todo lo que
+                necesitás de skincare,
+                maquillaje, pelo y cuidado
+                del rostro en Argentina. En
+                3 cuotas sin interés y con
+                envíos a todo el país.</h3>
+        </div>
 
-            <div class="links">
-                <h1 id="links">Links</h1>
-                <hr>
-                <ul>
-                    <li><a href="/paginas/error.html"> Nosotros </a></li>
-                    <li><a href="/paginas/error.html">Como comprar </a></li>
-                    <li><a href="/paginas/error.html"> Terminos y condiciones</a></li>
-                    <li><a href="/paginas/error.html">Cancelar compra</a></li>
-                </ul>
-            </div>
+        <div class="links">
+            <h1 id="links">Links</h1>
+            <hr>
+            <ul>
+                <li><a href="/paginas/error.html"> Nosotros </a></li>
+                <li><a href="/paginas/error.html">Como comprar </a></li>
+                <li><a href="/paginas/error.html"> Terminos y condiciones</a></li>
+                <li><a href="/paginas/error.html">Cancelar compra</a></li>
+            </ul>
+        </div>
 
-            <div class="contacto">
-                <h1 id="contacto">Contacto</h1>
-                <hr>
-                <ul>
-                    <li><a href="/paginas/error.html">Whatsapp</a></li>
-                    <li><a href="/paginas/error.html">Mail</a></li>
-                    <li><a href="/paginas/error.html">Ubicacion</a></li>
-                </ul>
-            </div>
-        </article>
-    </section>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
-
+        <div class="contacto">
+            <h1 id="contacto">Contacto</h1>
+            <hr>
+            <ul>
+                <li><a href="/paginas/error.html">Whatsapp</a></li>
+                <li><a href="/paginas/error.html">Mail</a></li>
+                <li><a href="/paginas/error.html">Ubicacion</a></li>
+            </ul>
+        </div>
+    </article>
+</section>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
